匠式超硬質ブロックの仮実装(見た目のみ)